# pytgasu

./: .gitignore  README.rst  pytgasu.py  setup.cfg  setup.py
pytgasu/: __init__.py  cli.py  constants.py  strings.py
pytgasu/core/: __init__.py
pytgasu/defgen/: __init__.py  defgen.py
pytgasu/prepare/: __init__.py  defgen.py  manipulation.py
pytgasu/upload/: __init__.py  customised_session.py  defparse.py  uploader.py
pytgasu/uploader/: __init__.py  customised_session.py  defparse.py  uploader.py
