[metadata]
name = pytgasu
version = attr: pytgasu.__version__
description = Telegram sticker sets creation automated (partially).
long_description = file: README.rst
keywords = Telegram, stickers
url = https://github.com/alemonmk/pytgasu
author = Lemon Lam
author_email = almk@rmntn.net
license = GPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    Topic :: Communications :: Chat
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.5
install_requires =
    setuptools>=30.3.0
    Telethon==0.18.1.1
    click
    Pillow
tests_require =
    nose
    coverage
packages = find:
include_package_data = yes
zip_safe = yes

[options.packages.find]
exclude =
    contrib
    docs
    tests

[options.extras_require]
test =
    nose
    coverage

[alias]
test = nosetests

[nosetests]
tests=pytgasu/tests
with-coverage=1
cover-erase=1
cover-branches=1
cover-html=1
cover-no-print=1
